--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <img src="sistema-solar-2-1-1920x1024.jpeg.webp" usemap="#image-map">
 
 <map name="image-map">
-    <area target="" alt="Terra" title="Terra" href="http://127.0.0.1:3000/pagina.1.html" coords="552,762,269" shape="circle">
+    <area target="" alt="Terra" title="Terra" href="https://pt.wikipedia.org/wiki/Terra" coords="552,762,269" shape="circle">
     <area target="" alt="Sol" title="Sol" href="http://127.0.0.1:3000/pagina.2.html" coords="1890,348,297" shape="circle">
     <area target="" alt="Vênus" title="Vênus" href="http://127.0.0.1:3000/pagina.3.html" coords="1512,692,239" shape="circle">
 </map>
