--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
 <map name="image-map">
     <area target="" alt="Terra" title="Terra" href="https://pt.wikipedia.org/wiki/Terra" coords="552,762,269" shape="circle">
-    <area target="" alt="Sol" title="Sol" href="http://127.0.0.1:3000/pagina.2.html" coords="1890,348,297" shape="circle">
-    <area target="" alt="Vênus" title="Vênus" href="http://127.0.0.1:3000/pagina.3.html" coords="1512,692,239" shape="circle">
+    <area target="" alt="Sol" title="Sol" href="https://pt.wikipedia.org/wiki/Sol" coords="1890,348,297" shape="circle">
+    <area target="" alt="Vênus" title="Vênus" href="https://pt.wikipedia.org/wiki/V%C3%A9nus_(planeta)" coords="1512,692,239" shape="circle">
 </map>
 
         
